# what-the-particle

./: Cargo.toml  README.md  flake.nix  index.html  justfile  rust-toolchain.toml
js/: cameramanager.js  main.js  visualizer.js
src/: lib.rs  main.rs
src/geometry/: volume.rs
src/particle/: particle.rs
src/sim/: world.rs
src/utils/: constants.rs  macro.rs  mod.rs  operations.rs  physics.rs  vec3.rs
