[package]
name = "mount_charles"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = "0.5.1"
rand = "0.9.2"
rand_distr = "0.5.1"
wasm-bindgen = "=0.2.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
